# flowforge

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api_reference.md  quickstart.md
examples/: basic_workflow.py  parallel_workflow.py
flowforge/: __init__.py  core.py  exceptions.py
taskorchestrator/: exceptions.py  hooks.py
tests/: test_core.py  test_hooks.py
