[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskorchestrator"
version = "1.0.0"
description = "A library for managing workflows of asynchronous tasks."
authors = [{ name = "Walter Avelino", email = "walter.avelin@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing-extensions>=4.0.0",
]